[package]
name = "quasar_dex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.0.0" }
lp_token = { path = "../lp_token" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
lp_token = { path = "../lp_token" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
